--- a/project1/css/index.css
+++ b/project1/css/index.css
@@ -39,14 +39,14 @@ body {
   width: 0px;
   height: 0px;
   transform: rotate(135deg);
-	border: 1.8px dodgerblue solid;
+	border: 1.8px white solid;
   /*background-color: dodgerblue;*/
   animation: droplet 1s ease-out forwards;
   transition: 0.5s;
 }
 
 #Icon:hover {
-	background-color: dodgerblue;
+	background-color: white;
 }
 
 .Concept {
