--- a/project3/documentation/css/global.css
+++ b/project3/documentation/css/global.css
@@ -42,7 +42,7 @@ a {
 }
 
 a:link {
-	color: dodgerblue;
+	color: red;
 }
 
 a:visited {
@@ -50,7 +50,7 @@ a:visited {
 }
 
 a:visited:hover {
-	color: dodgerblue;
+	color: red;
 }
 
 a:hover {
